--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -749,9 +749,9 @@ section,
 
 
 /*--------------------------------------------------------------
-# Resume Section
+# Work experience Section
 --------------------------------------------------------------*/
-.resume .resume-title {
+.work-experience .work-experience-title {
   color: var(--heading-color);
   font-size: 26px;
   font-weight: 700;
@@ -759,14 +759,14 @@ section,
   margin-bottom: 20px;
 }
 
-.resume .resume-item {
+.work-experience .work-experience-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
   border-left: 2px solid var(--accent-color);
   position: relative;
 }
 
-.resume .resume-item h4 {
+.work-experience .work-experience-item h4 {
   line-height: 18px;
   font-size: 18px;
   font-weight: 600;
@@ -775,27 +775,26 @@ section,
   margin-bottom: 10px;
 }
 
-.resume .resume-item h5 {
+.work-experience .work-experience-item h5 {
   font-size: 16px;
-  padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
 }
 
-.resume .resume-item ul {
+.work-experience .work-experience-item ul {
   padding-left: 20px;
 }
 
-.resume .resume-item ul li {
+.work-experience .work-experience-item ul li {
   padding-bottom: 10px;
 }
 
-.resume .resume-item:last-child {
+.work-experience .work-experience-item:last-child {
   padding-bottom: 0;
 }
 
-.resume .resume-item::before {
+.work-experience .work-experience-item::before {
   content: "";
   position: absolute;
   width: 16px;
@@ -1300,6 +1299,24 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
+.skills-custom-container {
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: space-around;
+  gap: 20px; /* Optional: Adjust the space between columns */
+}
+
+.skill-custom-category {
+  flex: 1;
+  /* flex: 1 1 calc(50% - 20px); Ensures equal width */
+  min-width: 200px; /* Prevents it from shrinking too much */
+}
+
+.skill-custom-category ul {
+  /* list-style-type: none; */
+  /* padding: 0; */
+}
+
+.skill-custom-category h3 {
+  margin-bottom: 10px;
 }
